Subiendo primera parte de proyecto

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--creando filas y columnas-->
     <div class="tictactoe">
       <div class="row">
-        <div class="column">o</div>
-        <div class="column">x</div>
+        <div class="column"></div>
+        <div class="column"></div>
         <div class="column"></div>
       </div>
 
