--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
+    <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <!--primer cuadro jugadores-->
+    <h1>TIC TAC TOE</h1>
     <h3="players"></h3>
     <!--creando filas y columnas-->
-    <div class="tictactoe">
-      <div class="row">
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
-      </div>
+    <table class="tictactoe tictactoe-js">
+      <tbody>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
 
-      <div class="row">
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
-      </div>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
 
-      <div class="row">
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
-      </div>
-    </div>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+
+    </tbody>
+  </table>
     <!--segundp cuadro ganador-->
     <h3 id="winner"></h3>
     <!--boton de reseteo-->
