Subiendo proyecto terminado

--- a/index.html
+++ b/index.html
@@ -14,30 +14,33 @@
     <table class="tictactoe tictactoe-js">
       <tbody>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td id="c1"></td>
+        <td id="c2"></td>
+        <td id="c3"></td>
       </tr>
 
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-
+        <td id="c4"></td>
+        <td id="c5"></td>
+        <td id="c6"></td>
       </tr>
 
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td id="c7"></td>
+        <td id="c8"></td>
+        <td id="c9"></td>
       </tr>
 
     </tbody>
   </table>
-    <!--segundp cuadro ganador-->
-    <h3 id="winner"></h3>
+    <!--segundo cuadro ganador-->
+    <div id="result">
+      <h3 id="winner">DEAD HEAT!</h3>
+    </div>
     <!--boton de reseteo-->
-    <button class="b-reset">RESET</button>
+    <div id="conteiner-button">
+      <button type="button" id="b-reset">RESTART</button>
+    </div>
     <script type="text/javascript" src="js/app.js">
 
     </script>
