Actualizando archivo js

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </table>
     <!--segundo cuadro ganador-->
     <div id="result">
-      <h3 id="winner">DEAD HEAT!</h3>
+      <h3 id="winner">TO PLAY!</h3>
     </div>
     <!--boton de reseteo-->
     <div id="conteiner-button">
